fixed popup visibility

--- a/blocks/popup/_opend/popup_opend.css
+++ b/blocks/popup/_opend/popup_opend.css
@@ -1,3 +1,4 @@
 .popup_opend {
-  display: flex;
+  opacity: 1;
+  visibility: visible;
 }
